# hp-backend

./: .env  .env.example  .gitignore  AGENTS.md  API_TESTING_GUIDE.md  db.sqlite3  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
apps/accounts/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_user_bio_and_more.py  0003_user_is_email_verified.py  0004_role_userrole_remove_user_is_courier_and_more.py  0005_emailverificationcode.py  0006_remove_user_roles_remove_userrole_unique_user_role_and_more.py  0008_user_geodata.py  (+3 more)
apps/collections/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/common/: admin.py  file_validators.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/communications/: admin.py  consumers.py  invitation_handlers.py  middleware.py  models.py  routing.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/core/: admin.py  models.py  tests.py
apps/organizations/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml  docker-entrypoint.sh
docker/nginx/: default.conf
docs/: agent_project_design_doc.md  backend_er_diagrams.md  collections_api.md  frontend_agent_api_guide.md  postman_api_testing_guide.md  push_notifications.md  russia_citiesREADME.md
hp_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+41 files in other folders)
